<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    tools:context=".view.CardExpanded">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/snap_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/snap_title_output"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/changeImageTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="5dp"
                    android:enabled="false"
                    android:text="@string/change_image"
                    android:textColor="#05716C"
                    android:textSize="16sp"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/snap_image"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:minHeight="350dp"
                    android:background="#0f0f0f0f"
                    android:padding="1dp"
                    android:src="@drawable/fridge_preview"
                    android:contentDescription="@string/snap_image" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/snap_comment_output_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/your_commentary"
                    android:inputType="text|textMultiLine"
                    android:maxLines="6"
                    android:scrollbars="vertical"
                    android:layout_marginBottom="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/snap_comment_output"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

    <Button
        android:id="@+id/save_snap_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:enabled="false"
        android:text="@string/edit_snap"
        android:textAllCaps="false"
        android:visibility="invisible" />

</LinearLayout>